{
    "name": "UI Buttons",
    "maps": [
        {
            "name": "UI",
            "id": "dd6befae-1b1c-46e8-9e52-2303ab0246b9",
            "actions": [
                {
                    "name": "Start",
                    "type": "Button",
                    "id": "f7f4e86e-fdf2-4f9e-8e01-86c2708bb798",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Level Select",
                    "type": "Button",
                    "id": "c3646ca8-7405-43c9-9385-5a4cc66ddb8a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Quit",
                    "type": "Button",
                    "id": "1bcced32-4819-41d6-aa8a-dabba9eab920",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "3f479239-25e8-4194-8fca-2260ccd4f274",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Resume",
                    "type": "Button",
                    "id": "993b88fe-8d20-4edf-97f2-404a4fdf3031",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MainMenu",
                    "type": "Button",
                    "id": "d4a49668-09d9-4896-aff1-c71cfc3a3a74",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d99302d6-85b5-4190-89fa-cad508443150",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Level Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "40609e34-16a9-4277-95e9-59d04228f366",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Quit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "750eae80-c17c-4d4e-b458-13a83b1f6f90",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Start",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e30ae924-22e0-48f6-83ec-4070572ae0ad",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "116f651b-de74-471b-b995-5624ea16b1cc",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Resume",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "883fdd67-5c31-4c13-8cf0-172987358794",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MainMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Level Select",
            "id": "dee5a52b-3b9d-43da-a9b5-a26eb1d58c8e",
            "actions": [
                {
                    "name": "Level1",
                    "type": "Button",
                    "id": "73e0dd8f-099f-46ec-b88d-3adcd34f01d8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Level2",
                    "type": "Button",
                    "id": "7042c076-39ca-4576-8856-bc1f4c105aa3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Level3",
                    "type": "Button",
                    "id": "96f391aa-a899-4986-9a28-03f4c8304108",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Close",
                    "type": "Button",
                    "id": "6d216466-38e9-437b-8967-22fdfe867624",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "dd50f54d-e4e5-4c18-bdec-14b40e24bcf5",
                    "path": "<Keyboard>/f1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Level1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8b1d335d-8594-413c-8fc5-09b8e5ec035a",
                    "path": "<Keyboard>/f2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Level2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4b643141-dfe7-4778-8d31-8a422b4cdaaf",
                    "path": "<Keyboard>/f3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Level3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ae83f8d1-cd65-4c23-87ab-b68179536c1e",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Close",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}